{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 644,
  "lineage": "4e69b787-6ef2-5a25-7c9d-f41f5539a626",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kubmaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240501",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/zones/us-central1-a/disks/bababoy-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/new-poject-425116/zones/us-central1-a/instances/bababoy-master",
            "instance_id": "5908231103654291894",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "stas_kuleckiu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCnloNV7QJ2P3hFZWzXfpxbVCRv6Ksa+Er7jqiOd2hTrx53DbjYF/fd5hFlO2msL5uPeYqCYvDlNSfVIRFjeghMMH5IBacmwpaG6QfPWRDfsk99om+x9IC7aX/oerUAv4BCMMHP+ph5Suo7vRxne9+MKyE46Scx0ECQlaUDypbYIpHrTktERoSayiBV/Y9ek/ZZtjZVOaG+fAoDCLWqxT4Cu5A2dsIbY2JV6IyUiKQ46Brtmnfe3GX2QbqZFM/uQjJet/7uo39Wd5ZT8RQWXCpmhzIkRxFK7SIcXwTThDnehfQVJaXzigY793vXZlANgqlqWoA2g0dYS7PRTOy5W8Rd2SBRURKUP/jjM30V5Ypkjh5MDOVjJBvOtU0AQCTnibx3MqVhqz2GRmPWrz0pBHy/llj/QP2BqyuUraG [...]
            },
            "metadata_fingerprint": "XuAM22McV4w=",
            "name": "bababoy-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.86.145",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
                "network_ip": "10.2.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/regions/us-central1/subnetworks/bababoy-subnet1",
                "subnetwork_project": "new-poject-425116"
              }
            ],
            "project": "new-poject-425116",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/zones/us-central1-a/instances/bababoy-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "fierwall-http-https",
              "fierwall-kuber",
              "fierwall-ssh"
            ],
            "tags_fingerprint": "HqFfCual-Bs=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.networks.google_compute_network.mynetwork",
            "module.networks.google_compute_subnetwork.privatesub1"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kubworker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240501",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/zones/us-central1-a/disks/bababoy-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/new-poject-425116/zones/us-central1-a/instances/bababoy-worker",
            "instance_id": "710705893875542454",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "stas_kuleckiu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCnloNV7QJ2P3hFZWzXfpxbVCRv6Ksa+Er7jqiOd2hTrx53DbjYF/fd5hFlO2msL5uPeYqCYvDlNSfVIRFjeghMMH5IBacmwpaG6QfPWRDfsk99om+x9IC7aX/oerUAv4BCMMHP+ph5Suo7vRxne9+MKyE46Scx0ECQlaUDypbYIpHrTktERoSayiBV/Y9ek/ZZtjZVOaG+fAoDCLWqxT4Cu5A2dsIbY2JV6IyUiKQ46Brtmnfe3GX2QbqZFM/uQjJet/7uo39Wd5ZT8RQWXCpmhzIkRxFK7SIcXwTThDnehfQVJaXzigY793vXZlANgqlqWoA2g0dYS7PRTOy5W8Rd2SBRURKUP/jjM30V5Ypkjh5MDOVjJBvOtU0AQCTnibx3MqVhqz2GRmPWrz0pBHy/llj/QP2BqyuUraG [...]
            },
            "metadata_fingerprint": "XuAM22McV4w=",
            "name": "bababoy-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.194.24.138",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
                "network_ip": "10.2.3.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/regions/us-central1/subnetworks/bababoy-subnet1",
                "subnetwork_project": "new-poject-425116"
              }
            ],
            "project": "new-poject-425116",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/zones/us-central1-a/instances/bababoy-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "fierwall-http-https",
              "fierwall-kuber",
              "fierwall-ssh"
            ],
            "tags_fingerprint": "HqFfCual-Bs=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.networks.google_compute_network.mynetwork",
            "module.networks.google_compute_subnetwork.privatesub1"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fierwall-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-17T07:37:51.100-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/new-poject-425116/global/firewalls/bababoy-fierwall-http-https",
            "log_config": [],
            "name": "bababoy-fierwall-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
            "priority": 1000,
            "project": "new-poject-425116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/firewalls/bababoy-fierwall-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "fierwall-http-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networks.google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fierwall-kuber",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "53",
                  "68",
                  "323",
                  "6443",
                  "44111",
                  "2379-2381",
                  "10248-10260",
                  "10250",
                  "30000-32767",
                  "2376",
                  "8472",
                  "9099",
                  "2379-2380",
                  "9100",
                  "9090",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-17T07:37:51.122-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/new-poject-425116/global/firewalls/bababoy-fierwall-kuber",
            "log_config": [],
            "name": "bababoy-fierwall-kuber",
            "network": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
            "priority": 1000,
            "project": "new-poject-425116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/firewalls/bababoy-fierwall-kuber",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "fierwall-kuber"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networks.google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fierwall-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-17T07:37:51.174-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/new-poject-425116/global/firewalls/bababoy-fierwall-ssh",
            "log_config": [],
            "name": "bababoy-fierwall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
            "priority": 1000,
            "project": "new-poject-425116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/firewalls/bababoy-fierwall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "fierwall-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networks.google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mynetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
            "mtu": 0,
            "name": "bababoy-vpsnetworkter",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2702283581945440711",
            "project": "new-poject-425116",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter"
          }
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-17T07:37:51.883-07:00",
            "gateway_address": "10.2.3.1",
            "id": "projects/new-poject-425116/regions/us-central1/subnetworks/bababoy-subnet1",
            "ip_cidr_range": "10.2.3.0/24",
            "name": "bababoy-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/global/networks/bababoy-vpsnetworkter",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "new-poject-425116",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/new-poject-425116/regions/us-central1/subnetworks/bababoy-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networks.google_compute_network.mynetwork"
          ]
        }
      ]
    }
  ]
}